# KashLang

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  interpreter.rs  lexer.rs  main.rs
src/parse/: expr.rs  mod.rs
