[package]
name = "lang"
version = "0.2.0"
authors = ["PizzasBear <mx.sht06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "rt-core", "blocking"] }
futures = "0.3"
